[gd_scene load_steps=6 format=2]

[ext_resource path="res://Code/StageAssets/Minecart/Minecart.gd" type="Script" id=1]
[ext_resource path="res://Code/StageAssets/Minecart/MinecartWheel.tres" type="Texture" id=2]
[ext_resource path="res://Code/StageAssets/Minecart/MinecartBody.tres" type="Texture" id=3]
[ext_resource path="res://Code/PlayerAreas/TutorialArea.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 1 )

[node name="Minecart" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -18.0
margin_top = -12.0
margin_right = 18.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerArea2D"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="TutorialArea" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 1 )
size = Vector2( 16, 1 )
popup = "res://Menu/TutorialPopups/MinecartTutorial.tscn"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -18, -12, -18, 4, 18, 4, 18, -12, 16, -12, 16, 2, -16, 2, -16, -12 )

[node name="Graphics" type="Node2D" parent="."]
scale = Vector2( 0.167, 0.167 )

[node name="MinecartBody" type="Sprite" parent="Graphics"]
position = Vector2( 1.25024, -0.650475 )
texture = ExtResource( 3 )

[node name="LeftWheel" type="Sprite" parent="Graphics"]
position = Vector2( -50.5983, 68.3306 )
texture = ExtResource( 2 )

[node name="RightWheel" type="Sprite" parent="Graphics"]
position = Vector2( 53.5497, 68.3306 )
texture = ExtResource( 2 )
